[build-system]
requires = ['setuptools >=46.4', 'wheel', 'cython ~=3.0']
build-backend = "setuptools.build_meta"

[project]
name = "pymemesuite"
dynamic = ["version"]
description = "Cython bindings and Python interface to the MEME suite."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "COPYING" }
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
keywords = ["bioinformatics", "motif", "sequence", "enrichment", "logo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

[project.urls]
# Documentation = https://pymemesuite.readthedocs.io/en/stable/
"Bug Tracker" = "https://github.com/althonos/pymemesuite/issues"
"Changelog" = "https://github.com/althonos/pymemesuite/blob/master/CHANGELOG.md"
"Coverage" = "https://codecov.io/gh/althonos/pymemesuite/"
"Builds" = "https://github.com/althonos/pymemesuite/actions"
"PyPI" = "https://pypi.org/project/pymemesuite"

[project.optional-dependencies]
test = ["importlib-resources ; python_version < '3.9'"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pymemesuite.__version__"}

[tool.setuptools.packages.find]
namespaces = false
include = ["pymemesuite", "pymemesuite.data", "pymemesuite.tests"]
exclude = ["docs*", "tests*"]

[tool.cibuildwheel]
before-build = "pip install setuptools wheel cython"
build-frontend = { name = "pip", args = ["--no-build-isolation"] }
build-verbosity = 1
test-command = "python -m unittest pymemesuite.tests -v"
test-extras = ["test"]
free-threaded-support = false
